# LVGL_LCARS

./: .gitmodules  CMakeLists.txt  UI.cpp  UI.hpp  lv_conf.h  main.cpp
fonts/: antonio_22.c  antonio_24.c  antonio_28.c  antonio_32.c  antonio_36.c  antonio_48.c  antonio_96.c  antonio_bold_22.c  antonio_bold_24.c  antonio_bold_28.c  antonio_bold_32.c  antonio_bold_36.c  antonio_bold_48.c  antonio_bold_96.c
